Modals no longer shift content left

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -20,7 +20,10 @@
 }
 
 html {
+  /* show scrollbar on all pages for consistency (stop navbar shift) */
   overflow-y: scroll !important;
+  /* headlessui adds padding to the right to account for scroll bar */
+  padding-right: 0px !important;
 }
 
 /* from https://loading.io/css/ */
